--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "react_first",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://OlenaSonhrova.github.io/React_first",
+	"homepage": "https://OlenaSonhrova.github.io/react_first",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
