--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
 	"name": "react_first",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://OlenaSonhrova.github.io/react_first",
+	"homepage": ".",
 	"dependencies": {
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"axios": "^1.6.2",
+		"json-server": "^0.17.4",
+		"moment": "^2.29.4",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-loader-spinner": "^6.1.0",
+		"react-query": "^3.39.3",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
@@ -39,6 +44,7 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-private-property-in-object": "^7.21.11",
 		"gh-pages": "^6.1.0"
 	}
 }
