--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/jest-dom": "^5.17.0",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^13.5.0",
+		"antd": "^5.12.5",
 		"axios": "^1.6.2",
 		"json-server": "^0.17.4",
 		"moment": "^2.29.4",
@@ -14,6 +15,8 @@
 		"react-dom": "^18.2.0",
 		"react-loader-spinner": "^6.1.0",
 		"react-query": "^3.39.3",
+		"react-router": "^6.21.0",
+		"react-router-dom": "^6.21.0",
 		"react-scripts": "5.0.1",
 		"web-vitals": "^2.1.4"
 	},
